--- a/src/StyleSheets/CalculateComponent.css
+++ b/src/StyleSheets/CalculateComponent.css
@@ -19,4 +19,10 @@ body {
     max-width: 700px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
   }
-    
+.top-right-icon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  font-size: 24px;
+}    
